--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/three": "^0.155.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "leva": "^0.9.35",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
